--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
-    "mariadb": "^3.2.3"
+    "mariadb": "^3.2.3",
+    "sequelize": "^6.37.1"
   }
 }
