--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.3",
     "mariadb": "^3.2.3",
+    "mongodb": "^6.4.0",
     "sequelize": "^6.37.1"
   }
 }
