--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.3",
     "mariadb": "^3.2.3",
     "mongodb": "^6.4.0",
+    "mongoose": "^8.2.1",
     "sequelize": "^6.37.1"
   }
 }
