--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "connect-mongodb-session": "^5.0.0",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
+    "express-session": "^1.18.0",
     "mariadb": "^3.2.3",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.1",
