--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "mariadb": "^3.2.3",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.1",
+    "nodemailer": "^6.9.12",
+    "nodemailer-postmark-transport": "^6.0.0",
     "sequelize": "^6.37.1"
   }
 }
