--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.3",
     "express-session": "^1.18.0",
+    "express-validator": "^7.0.1",
     "mariadb": "^3.2.3",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.1",
