--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.12",
     "nodemailer-postmark-transport": "^6.0.0",
+    "pdfkit": "^0.14.0",
     "sequelize": "^6.37.1"
   }
 }
