--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.3",
     "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
     "mariadb": "^3.2.3",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.1",
